--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
 # Compiled class file
 *.class
 
+# Created by .ignore support plugin (hsz.mobi)
+.gitignore
+
 # Log file
 *.log
+
+*.DS_Store 
+Thumbs.db 
+*.sw? 
+.#* 
+*# 
+*~ 
+*.sublime-* 
 
 # BlueJ files
 *.ctxt
@@ -21,3 +32,27 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Build Artifacts 
+
+.gradle/
+build/
+target/
+bin/
+dependency-reduced-pom.xml 
+
+# Eclipse Project Files 
+
+.classpath
+.project
+.settings/ 
+
+# IntelliJ IDEA Files 
+
+*.iml
+*.ipr 
+*.iws 
+*.idea
+
+
+
