--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,20 @@
 			<version>4.3.3</version>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.3</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+			<version>1.7</version>
+			<scope>runtime</scope>
+		</dependency>
 		
   </dependencies>
 </project>
